--- a/packages/textfield/package.json
+++ b/packages/textfield/package.json
@@ -12,7 +12,7 @@
     "sveltejs"
   ],
   "scripts": {
-    "prepublishOnly": "sass -I node_modules --no-source-map _style.scss bare.css && sass -I node_modules --no-source-map character-counter/_style.scss character-counter/bare.css && sass -I node_modules --no-source-map helper-text/_style.scss helper-text/bare.css && sass -I node_modules --no-source-map icon/_style.scss icon/bare.css",
+    "prepublishOnly": "echo \"$(glob '**/node_modules' | lam -s '-I ' - | paste -s -d ' ' -) --no-source-map _style.scss bare.css\" | xargs sass && echo \"$(glob '**/node_modules' | lam -s '-I ' - | paste -s -d ' ' -) --no-source-map character-counter/_style.scss character-counter/bare.css\" | xargs sass && echo \"$(glob '**/node_modules' | lam -s '-I ' - | paste -s -d ' ' -) --no-source-map helper-text/_style.scss helper-text/bare.css\" | xargs sass && echo \"$(glob '**/node_modules' | lam -s '-I ' - | paste -s -d ' ' -) --no-source-map icon/_style.scss icon/bare.css\" | xargs sass",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "publishConfig": {
