--- a/site2/package.json
+++ b/site2/package.json
@@ -4,11 +4,20 @@
   "description": "SMUI Website",
   "scripts": {
     "dev": "sapper dev -p 5000",
-    "build": "sapper build",
-    "export": "sapper export ./dist",
+    "build": "sapper build --legacy",
+    "export": "sapper export ./dist --legacy",
     "start": "node __sapper__/build",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/hperrin/svelte-material-ui.git"
+  },
+  "author": "Hunter Perrin <hperrin@gmail.com>",
+  "bugs": {
+    "url": "https://github.com/hperrin/svelte-material-ui/issues"
+  },
+  "license": "Apache-2.0",
   "dependencies": {
     "compression": "^1.7.4",
     "polka": "next",
