--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "svelte-material-ui",
-  "version": "1.0.0-beta.15",
+  "version": "1.0.0-beta.17",
   "description": "Svelte Material UI Components",
   "keywords": [
     "svelte",
@@ -31,37 +31,37 @@
   },
   "license": "Apache-2.0",
   "dependencies": {
-    "@smui/button": "^1.0.0-beta.15",
-    "@smui/card": "^1.0.0-beta.15",
-    "@smui/checkbox": "^1.0.0-beta.15",
-    "@smui/chips": "^1.0.0-beta.15",
-    "@smui/data-table": "^1.0.0-beta.15",
-    "@smui/dialog": "^1.0.0-beta.15",
-    "@smui/drawer": "^1.0.0-beta.15",
-    "@smui/fab": "^1.0.0-beta.15",
-    "@smui/floating-label": "^1.0.0-beta.15",
-    "@smui/form-field": "^1.0.0-beta.15",
-    "@smui/icon-button": "^1.0.0-beta.15",
-    "@smui/image-list": "^1.0.0-beta.15",
-    "@smui/line-ripple": "^1.0.0-beta.15",
-    "@smui/linear-progress": "^1.0.0-beta.15",
-    "@smui/list": "^1.0.0-beta.15",
-    "@smui/menu": "^1.0.0-beta.15",
-    "@smui/menu-surface": "^1.0.0-beta.15",
-    "@smui/notched-outline": "^1.0.0-beta.15",
-    "@smui/paper": "^1.0.0-beta.15",
-    "@smui/radio": "^1.0.0-beta.15",
-    "@smui/ripple": "^1.0.0-beta.14",
-    "@smui/select": "^1.0.0-beta.15",
-    "@smui/slider": "^1.0.0-beta.15",
-    "@smui/snackbar": "^1.0.0-beta.15",
-    "@smui/switch": "^1.0.0-beta.15",
-    "@smui/tab": "^1.0.0-beta.15",
-    "@smui/tab-bar": "^1.0.0-beta.15",
-    "@smui/tab-indicator": "^1.0.0-beta.15",
-    "@smui/tab-scroller": "^1.0.0-beta.15",
-    "@smui/textfield": "^1.0.0-beta.15",
-    "@smui/top-app-bar": "^1.0.0-beta.15"
+    "@smui/button": "1.0.0-beta.17",
+    "@smui/card": "1.0.0-beta.17",
+    "@smui/checkbox": "1.0.0-beta.17",
+    "@smui/chips": "1.0.0-beta.17",
+    "@smui/data-table": "1.0.0-beta.17",
+    "@smui/dialog": "1.0.0-beta.17",
+    "@smui/drawer": "1.0.0-beta.17",
+    "@smui/fab": "1.0.0-beta.17",
+    "@smui/floating-label": "1.0.0-beta.17",
+    "@smui/form-field": "1.0.0-beta.17",
+    "@smui/icon-button": "1.0.0-beta.17",
+    "@smui/image-list": "1.0.0-beta.17",
+    "@smui/line-ripple": "1.0.0-beta.17",
+    "@smui/linear-progress": "1.0.0-beta.17",
+    "@smui/list": "1.0.0-beta.17",
+    "@smui/menu": "1.0.0-beta.17",
+    "@smui/menu-surface": "1.0.0-beta.17",
+    "@smui/notched-outline": "1.0.0-beta.17",
+    "@smui/paper": "1.0.0-beta.17",
+    "@smui/radio": "1.0.0-beta.17",
+    "@smui/ripple": "1.0.0-beta.17",
+    "@smui/select": "1.0.0-beta.17",
+    "@smui/slider": "1.0.0-beta.17",
+    "@smui/snackbar": "1.0.0-beta.17",
+    "@smui/switch": "1.0.0-beta.17",
+    "@smui/tab": "1.0.0-beta.17",
+    "@smui/tab-bar": "1.0.0-beta.17",
+    "@smui/tab-indicator": "1.0.0-beta.17",
+    "@smui/tab-scroller": "1.0.0-beta.17",
+    "@smui/textfield": "1.0.0-beta.17",
+    "@smui/top-app-bar": "1.0.0-beta.17"
   },
   "devDependencies": {
     "@commitlint/cli": "^8.2.0",
