--- a/packages/button/package.json
+++ b/packages/button/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@smui/button",
-  "version": "1.0.0-beta.21",
+  "version": "1.0.0",
   "description": "Svelte Material UI - Button",
   "keywords": [
     "svelte",
@@ -31,8 +31,8 @@
     "@material/button": "^3.2.0",
     "@material/elevation": "^3.1.0",
     "@material/feature-targeting": "^3.1.0",
-    "@smui/common": "^1.0.0-beta.21",
-    "@smui/ripple": "^1.0.0-beta.21"
+    "@smui/common": "^1.0.0",
+    "@smui/ripple": "^1.0.0"
   },
   "devDependencies": {
     "glob-cmd": "0.0.7",
