--- a/packages/fab/package.json
+++ b/packages/fab/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@smui/fab",
-  "version": "1.0.0-beta.21",
+  "version": "1.0.0",
   "description": "Svelte Material UI - Floating Action Button",
   "keywords": [
     "svelte",
@@ -30,8 +30,8 @@
   "dependencies": {
     "@material/fab": "^3.2.0",
     "@material/feature-targeting": "^3.1.0",
-    "@smui/common": "^1.0.0-beta.21",
-    "@smui/ripple": "^1.0.0-beta.21"
+    "@smui/common": "^1.0.0",
+    "@smui/ripple": "^1.0.0"
   },
   "devDependencies": {
     "glob-cmd": "0.0.7",
