--- a/packages/menu-surface/package.json
+++ b/packages/menu-surface/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@smui/menu-surface",
-  "version": "1.0.0-beta.21",
+  "version": "1.0.0",
   "description": "Svelte Material UI - Menu Surface",
   "keywords": [
     "svelte",
@@ -29,7 +29,7 @@
   "license": "Apache-2.0",
   "dependencies": {
     "@material/menu-surface": "^3.2.0",
-    "@smui/common": "^1.0.0-beta.21"
+    "@smui/common": "^1.0.0"
   },
   "devDependencies": {
     "glob-cmd": "0.0.7",
