--- a/packages/menu/package.json
+++ b/packages/menu/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@smui/menu",
-  "version": "1.0.0-beta.21",
+  "version": "1.0.0",
   "description": "Svelte Material UI - Menu",
   "keywords": [
     "svelte",
@@ -29,9 +29,9 @@
   "license": "Apache-2.0",
   "dependencies": {
     "@material/menu": "^3.2.0",
-    "@smui/common": "^1.0.0-beta.21",
-    "@smui/list": "^1.0.0-beta.21",
-    "@smui/menu-surface": "^1.0.0-beta.21"
+    "@smui/common": "^1.0.0",
+    "@smui/list": "^1.0.0",
+    "@smui/menu-surface": "^1.0.0"
   },
   "devDependencies": {
     "glob-cmd": "0.0.7",
