--- a/packages/ripple/package.json
+++ b/packages/ripple/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@smui/ripple",
-  "version": "1.0.0-beta.21",
+  "version": "1.0.0",
   "description": "Svelte Material UI - Ripple",
   "keywords": [
     "svelte",
