--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "svelte-material-ui",
-  "version": "1.0.0-beta.21",
+  "version": "1.0.0",
   "description": "Svelte Material UI Components",
   "keywords": [
     "svelte",
@@ -31,44 +31,44 @@
   },
   "license": "Apache-2.0",
   "dependencies": {
-    "@smui/button": "1.0.0-beta.21",
-    "@smui/card": "1.0.0-beta.21",
-    "@smui/checkbox": "1.0.0-beta.21",
-    "@smui/chips": "1.0.0-beta.21",
-    "@smui/data-table": "1.0.0-beta.21",
-    "@smui/dialog": "1.0.0-beta.21",
-    "@smui/drawer": "1.0.0-beta.21",
-    "@smui/fab": "1.0.0-beta.21",
-    "@smui/floating-label": "1.0.0-beta.21",
-    "@smui/form-field": "1.0.0-beta.21",
-    "@smui/icon-button": "1.0.0-beta.21",
-    "@smui/image-list": "1.0.0-beta.21",
-    "@smui/line-ripple": "1.0.0-beta.21",
-    "@smui/linear-progress": "1.0.0-beta.21",
-    "@smui/list": "1.0.0-beta.21",
-    "@smui/menu": "1.0.0-beta.21",
-    "@smui/menu-surface": "1.0.0-beta.21",
-    "@smui/notched-outline": "1.0.0-beta.21",
-    "@smui/paper": "1.0.0-beta.21",
-    "@smui/radio": "1.0.0-beta.21",
-    "@smui/ripple": "1.0.0-beta.21",
-    "@smui/select": "1.0.0-beta.21",
-    "@smui/slider": "1.0.0-beta.21",
-    "@smui/snackbar": "1.0.0-beta.21",
-    "@smui/switch": "1.0.0-beta.21",
-    "@smui/tab": "1.0.0-beta.21",
-    "@smui/tab-bar": "1.0.0-beta.21",
-    "@smui/tab-indicator": "1.0.0-beta.21",
-    "@smui/tab-scroller": "1.0.0-beta.21",
-    "@smui/textfield": "1.0.0-beta.21",
-    "@smui/top-app-bar": "1.0.0-beta.21"
+    "@smui/button": "1.0.0",
+    "@smui/card": "1.0.0",
+    "@smui/checkbox": "1.0.0",
+    "@smui/chips": "1.0.0",
+    "@smui/data-table": "1.0.0",
+    "@smui/dialog": "1.0.0",
+    "@smui/drawer": "1.0.0",
+    "@smui/fab": "1.0.0",
+    "@smui/floating-label": "1.0.0",
+    "@smui/form-field": "1.0.0",
+    "@smui/icon-button": "1.0.0",
+    "@smui/image-list": "1.0.0",
+    "@smui/line-ripple": "1.0.0",
+    "@smui/linear-progress": "1.0.0",
+    "@smui/list": "1.0.0",
+    "@smui/menu": "1.0.0",
+    "@smui/menu-surface": "1.0.0",
+    "@smui/notched-outline": "1.0.0",
+    "@smui/paper": "1.0.0",
+    "@smui/radio": "1.0.0",
+    "@smui/ripple": "1.0.0",
+    "@smui/select": "1.0.0",
+    "@smui/slider": "1.0.0",
+    "@smui/snackbar": "1.0.0",
+    "@smui/switch": "1.0.0",
+    "@smui/tab": "1.0.0",
+    "@smui/tab-bar": "1.0.0",
+    "@smui/tab-indicator": "1.0.0",
+    "@smui/tab-scroller": "1.0.0",
+    "@smui/textfield": "1.0.0",
+    "@smui/top-app-bar": "1.0.0"
   },
   "devDependencies": {
-    "@commitlint/cli": "^8.3.5",
-    "@commitlint/config-conventional": "^8.3.4",
+    "@commitlint/cli": "^9.1.1",
+    "@commitlint/config-conventional": "^9.1.1",
     "husky": "^4.2.5",
-    "lerna": "^3.20.2",
-    "svelte": "^3.20.1"
+    "lerna": "^3.22.1",
+    "svelte": "^3.24.0"
   },
   "husky": {
     "hooks": {
