--- a/site/package.json
+++ b/site/package.json
@@ -34,6 +34,7 @@
     "@material/theme": "^3.1.0",
     "@material/typography": "^3.1.0",
     "@mdi/js": "^5.1.45",
+    "@smui/autocomplete": "file:../packages/autocomplete",
     "@smui/button": "file:../packages/button",
     "@smui/card": "file:../packages/card",
     "@smui/checkbox": "file:../packages/checkbox",
