--- a/packages/autocomplete/package.json
+++ b/packages/autocomplete/package.json
@@ -23,6 +23,9 @@
     "url": "git+https://github.com/hperrin/svelte-material-ui.git"
   },
   "author": "Hunter Perrin <hperrin@gmail.com>",
+  "contributors": [
+    "Lorenzo Fiore <fiorelorenzo.fl@gmail.com> (https://github.com/fiorelorenzo/)"
+  ],
   "bugs": {
     "url": "https://github.com/hperrin/svelte-material-ui/issues"
   },
