--- a/site/package.json
+++ b/site/package.json
@@ -21,19 +21,24 @@
   "dependencies": {
     "compression": "^1.7.4",
     "polka": "next",
-    "sirv": "^0.4.2"
+    "sirv": "^1.0.10"
   },
   "devDependencies": {
-    "@babel/core": "^7.9.0",
+    "@babel/core": "^7.12.10",
     "@babel/plugin-syntax-dynamic-import": "^7.8.3",
-    "@babel/plugin-transform-runtime": "^7.9.0",
-    "@babel/preset-env": "^7.9.5",
-    "@babel/runtime": "^7.9.2",
+    "@babel/plugin-transform-runtime": "^7.12.10",
+    "@babel/preset-env": "^7.12.11",
+    "@babel/runtime": "^7.12.5",
     "@material/elevation": "^3.1.0",
     "@material/linear-progress": "^3.2.0",
     "@material/theme": "^3.1.0",
     "@material/typography": "^3.1.0",
-    "@mdi/js": "^5.1.45",
+    "@mdi/js": "^5.8.55",
+    "@rollup/plugin-babel": "^5.2.2",
+    "@rollup/plugin-commonjs": "^17.0.0",
+    "@rollup/plugin-node-resolve": "^11.0.1",
+    "@rollup/plugin-replace": "^2.3.4",
+    "@rollup/plugin-url": "^6.0.0",
     "@smui/button": "file:../packages/button",
     "@smui/card": "file:../packages/card",
     "@smui/checkbox": "file:../packages/checkbox",
@@ -66,19 +71,15 @@
     "@smui/tab-scroller": "file:../packages/tab-scroller",
     "@smui/textfield": "file:../packages/textfield",
     "@smui/top-app-bar": "file:../packages/top-app-bar/",
-    "node-sass": "^4.13.1",
+    "node-sass": "^5.0.0",
     "npm-run-all": "^4.1.5",
-    "postcss-scss": "^2.0.0",
-    "rollup": "^2.6.1",
+    "postcss-scss": "^3.0.4",
+    "rollup": "^2.35.1",
     "rollup-plugin-alias": "^2.2.0",
-    "rollup-plugin-babel": "^4.4.0",
-    "rollup-plugin-commonjs": "^10.1.0",
-    "rollup-plugin-node-resolve": "^5.2.0",
-    "rollup-plugin-postcss": "^2.8.1",
-    "rollup-plugin-replace": "^2.2.0",
-    "rollup-plugin-svelte": "^5.2.1",
-    "rollup-plugin-terser": "^5.3.0",
-    "sapper": "^0.27.12",
-    "svelte": "^3.20.1"
+    "rollup-plugin-postcss": "^4.0.0",
+    "rollup-plugin-svelte": "^7.0.0",
+    "rollup-plugin-terser": "^7.0.2",
+    "sapper": "^0.28.10",
+    "svelte": "^3.31.0"
   }
 }
