--- a/packages/menu-surface/package.json
+++ b/packages/menu-surface/package.json
@@ -32,6 +32,7 @@
     "@smui/common": "file:../common"
   },
   "devDependencies": {
+    "@material/animation": "^10.0.0",
     "glob-cmd": "0.0.7",
     "sass": "^1.32.8"
   }
