--- a/packages/list/package.json
+++ b/packages/list/package.json
@@ -28,6 +28,7 @@
   },
   "license": "Apache-2.0",
   "dependencies": {
+    "@material/dom": "^10.0.0",
     "@material/feature-targeting": "^10.0.0",
     "@material/list": "^10.0.0",
     "@smui/common": "file:../common",
