--- a/site/package.json
+++ b/site/package.json
@@ -35,10 +35,10 @@
     "@material/typography": "^10.0.0",
     "@mdi/js": "^5.9.55",
     "@rollup/plugin-babel": "^5.0.0",
-    "@rollup/plugin-commonjs": "^14.0.0",
-    "@rollup/plugin-node-resolve": "^8.0.0",
+    "@rollup/plugin-commonjs": "^18.0.0",
+    "@rollup/plugin-node-resolve": "^11.2.1",
     "@rollup/plugin-replace": "^2.4.2",
-    "@rollup/plugin-url": "^5.0.0",
+    "@rollup/plugin-url": "^6.0.0",
     "@smui/button": "file:../packages/button",
     "@smui/card": "file:../packages/card",
     "@smui/checkbox": "file:../packages/checkbox",
@@ -71,15 +71,14 @@
     "@smui/tab-scroller": "file:../packages/tab-scroller",
     "@smui/textfield": "file:../packages/textfield",
     "@smui/top-app-bar": "file:../packages/top-app-bar/",
-    "node-sass": "^5.0.0",
     "npm-run-all": "^4.1.5",
-    "postcss-scss": "^3.0.5",
     "rollup": "^2.44.0",
     "rollup-plugin-alias": "^2.2.0",
-    "rollup-plugin-postcss": "^4.0.0",
+    "rollup-plugin-scss": "^2.6.1",
     "rollup-plugin-svelte": "^7.1.0",
     "rollup-plugin-terser": "^7.0.2",
     "sapper": "^0.29.1",
+    "sass": "^1.32.8",
     "svelte": "^3.35.0"
   }
 }
