--- a/packages/data-table/package.json
+++ b/packages/data-table/package.json
@@ -29,8 +29,10 @@
   "license": "Apache-2.0",
   "dependencies": {
     "@material/data-table": "^10.0.0",
+    "@material/dom": "^10.0.0",
     "@smui/checkbox": "^2.0.0-beta.1",
-    "@smui/common": "^2.0.0-beta.1"
+    "@smui/common": "^2.0.0-beta.1",
+    "@smui/icon-button": "*"
   },
   "devDependencies": {
     "glob-cmd": "0.0.7",
