--- a/packages/snackbar/package.json
+++ b/packages/snackbar/package.json
@@ -12,7 +12,7 @@
     "sveltejs"
   ],
   "scripts": {
-    "#prepare": "echo \"$(npx glob '**/*' | sed 's/^/-I /' | paste -s -d ' ' -) --no-source-map _style.scss bare.css\" | xargs sass && echo \"$(npx glob '**/*' | sed 's/^/-I /' | paste -s -d ' ' -) --no-source-map kitchen/_style.scss kitchen/bare.css\" | xargs sass",
+    "prepare": "sass --no-source-map -I node_modules _style.scss bare.css && sass --no-source-map -I node_modules kitchen/_style.scss kitchen/bare.css",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "publishConfig": {
@@ -28,6 +28,7 @@
   },
   "license": "Apache-2.0",
   "dependencies": {
+    "@material/dom": "^10.0.0",
     "@material/feature-targeting": "^10.0.0",
     "@material/snackbar": "^10.0.0",
     "@smui/button": "^2.0.0-beta.1",
@@ -35,7 +36,6 @@
     "@smui/icon-button": "^2.0.0-beta.1"
   },
   "devDependencies": {
-    "glob-cmd": "0.0.7",
     "sass": "^1.32.8"
   }
 }
