--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "clean:css": "test -f bare.css && rm -r bare.css || true",
     "lint": "prettier --ignore-path .gitignore --check --plugin-search-dir=. .",
     "format": "prettier --ignore-path .gitignore --write --plugin-search-dir=. .",
-    "pages": "npm run bootstrap && cd packages/site && npm run build && cd ../.. && git add -f packages/site/build && git commit -m 'chore: update built files' && git push origin $(git subtree split --prefix packages/site/build master):gh-pages --force && git reset --hard HEAD^",
+    "pages": "npm run bootstrap && npm run pages:build && npm run pages:push",
+    "pages:build": "cd packages/site && npm run build && cd ../..",
+    "pages:push": "git add -f packages/site/build && git commit -m 'chore: update built files' && git push origin $(git subtree split --prefix packages/site/build master):gh-pages --force && git reset --hard HEAD^",
     "prepare": "husky install && npm run build:css",
     "build:css": "smui-theme compile bare.css",
     "test": "echo \"Error: no test specified\" && exit 1"
