--- a/package.json
+++ b/package.json
@@ -38,44 +38,44 @@
   },
   "license": "Apache-2.0",
   "dependencies": {
-    "@smui/banner": "5.0.0",
-    "@smui/button": "5.0.0",
-    "@smui/card": "5.0.0",
-    "@smui/checkbox": "5.0.0",
-    "@smui/chips": "5.0.0",
-    "@smui/circular-progress": "5.0.0",
-    "@smui/common": "5.0.0",
-    "@smui/data-table": "5.0.0",
-    "@smui/dialog": "5.0.0",
-    "@smui/drawer": "5.0.0",
-    "@smui/fab": "5.0.0",
-    "@smui/floating-label": "5.0.0",
-    "@smui/form-field": "5.0.0",
-    "@smui/icon-button": "5.0.0",
-    "@smui/image-list": "5.0.0",
-    "@smui/layout-grid": "5.0.0",
-    "@smui/line-ripple": "5.0.0",
-    "@smui/linear-progress": "5.0.0",
-    "@smui/list": "5.0.0",
-    "@smui/menu": "5.0.0",
-    "@smui/menu-surface": "5.0.0",
-    "@smui/notched-outline": "5.0.0",
-    "@smui/paper": "5.0.0",
-    "@smui/radio": "5.0.0",
-    "@smui/ripple": "5.0.0",
-    "@smui/segmented-button": "5.0.0",
-    "@smui/select": "5.0.0",
-    "@smui/slider": "5.0.0",
-    "@smui/snackbar": "5.0.0",
-    "@smui/switch": "5.0.0",
-    "@smui/tab": "5.0.0",
-    "@smui/tab-bar": "5.0.0",
-    "@smui/tab-indicator": "5.0.0",
-    "@smui/tab-scroller": "5.0.0",
-    "@smui/textfield": "5.0.0",
-    "@smui/tooltip": "5.0.0",
-    "@smui/top-app-bar": "5.0.0",
-    "@smui/touch-target": "5.0.0"
+    "@smui/banner": "file:packages/banner",
+    "@smui/button": "file:packages/button",
+    "@smui/card": "file:packages/card",
+    "@smui/checkbox": "file:packages/checkbox",
+    "@smui/chips": "file:packages/chips",
+    "@smui/circular-progress": "file:packages/circular-progress",
+    "@smui/common": "file:packages/common",
+    "@smui/data-table": "file:packages/data-table",
+    "@smui/dialog": "file:packages/dialog",
+    "@smui/drawer": "file:packages/drawer",
+    "@smui/fab": "file:packages/fab",
+    "@smui/floating-label": "file:packages/floating-label",
+    "@smui/form-field": "file:packages/form-field",
+    "@smui/icon-button": "file:packages/icon-button",
+    "@smui/image-list": "file:packages/image-list",
+    "@smui/layout-grid": "file:packages/layout-grid",
+    "@smui/line-ripple": "file:packages/line-ripple",
+    "@smui/linear-progress": "file:packages/linear-progress",
+    "@smui/list": "file:packages/list",
+    "@smui/menu": "file:packages/menu",
+    "@smui/menu-surface": "file:packages/menu-surface",
+    "@smui/notched-outline": "file:packages/notched-outline",
+    "@smui/paper": "file:packages/paper",
+    "@smui/radio": "file:packages/radio",
+    "@smui/ripple": "file:packages/ripple",
+    "@smui/segmented-button": "file:packages/segmented-button",
+    "@smui/select": "file:packages/select",
+    "@smui/slider": "file:packages/slider",
+    "@smui/snackbar": "file:packages/snackbar",
+    "@smui/switch": "file:packages/switch",
+    "@smui/tab": "file:packages/tab",
+    "@smui/tab-bar": "file:packages/tab-bar",
+    "@smui/tab-indicator": "file:packages/tab-indicator",
+    "@smui/tab-scroller": "file:packages/tab-scroller",
+    "@smui/textfield": "file:packages/textfield",
+    "@smui/tooltip": "file:packages/tooltip",
+    "@smui/top-app-bar": "file:packages/top-app-bar",
+    "@smui/touch-target": "file:packagestouch-target/"
   },
   "devDependencies": {
     "@commitlint/cli": "^14.1.0",
