--- a/packages/switch/package.json
+++ b/packages/switch/package.json
@@ -35,8 +35,9 @@
   },
   "license": "Apache-2.0",
   "dependencies": {
-    "@material/density": "^13.0.0",
+    "@material/feature-targeting": "^13.0.0",
     "@material/switch": "^13.0.0",
+    "@material/theme": "^13.0.0",
     "@smui/common": "^5.0.0",
     "@smui/ripple": "^5.0.0",
     "svelte2tsx": "^0.4.8"
