--- a/packages/common/package.json
+++ b/packages/common/package.json
@@ -56,14 +56,14 @@
   },
   "license": "Apache-2.0",
   "devDependencies": {
-    "sass": "^1.43.4",
+    "sass": "^1.44.0",
     "svelte-strip": "^1.0.0",
     "tslib": "^2.3.1",
-    "typescript": "~4.4.4"
+    "typescript": "^4.5.2"
   },
   "dependencies": {
     "@material/dom": "^13.0.0",
     "@tsconfig/svelte": "^2.0.1",
-    "svelte2tsx": "^0.4.10"
+    "svelte2tsx": "^0.4.11"
   }
 }
