--- a/packages/layout-grid/package.json
+++ b/packages/layout-grid/package.json
@@ -38,13 +38,13 @@
   "dependencies": {
     "@material/layout-grid": "^13.0.0",
     "@smui/common": "^6.0.0-beta.4",
-    "svelte2tsx": "^0.4.10"
+    "svelte2tsx": "^0.4.11"
   },
   "devDependencies": {
     "@tsconfig/svelte": "^2.0.1",
-    "sass": "^1.43.4",
+    "sass": "^1.44.0",
     "svelte-strip": "^1.0.0",
     "tslib": "^2.3.1",
-    "typescript": "~4.4.4"
+    "typescript": "^4.5.2"
   }
 }
