--- a/packages/site/package.json
+++ b/packages/site/package.json
@@ -81,12 +81,12 @@
     "@sveltejs/kit": "next",
     "mdsvex": "^0.9.8",
     "remark-slug": "^7.0.1",
-    "sass": "^1.43.4",
+    "sass": "^1.44.0",
     "smui-theme": "^6.0.0-beta.4",
     "svelte-preprocess": "^4.9.8",
     "tinygesture": "^1.1.4",
     "tslib": "^2.3.1",
-    "typescript": "~4.4.4",
+    "typescript": "^4.5.2",
     "vite": "^2.6.14"
   }
 }
